{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 88,
  "lineage": "7c5b0eb0-f9ea-0aaf-eee6-1a260b5b61b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403047027812:internet-gateway/igw-02e2039b0d9256729",
            "id": "igw-02e2039b0d9256729",
            "owner_id": "403047027812",
            "tags": {
              "Name": "rx_igw"
            },
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:403047027812:loadbalancer/app/rxelb/b43d32acb26df05b",
            "arn_suffix": "app/rxelb/b43d32acb26df05b",
            "dns_name": "rxelb-1863462092.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:403047027812:loadbalancer/app/rxelb/b43d32acb26df05b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rxelb",
            "security_groups": [
              "sg-0a2a9094d1b389367"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02190e94ccc95c83a"
              },
              {
                "subnet_id": "subnet-0479bea5bbe3c05ab"
              }
            ],
            "subnets": [
              "subnet-02190e94ccc95c83a",
              "subnet-0479bea5bbe3c05ab"
            ],
            "vpc_id": "vpc-07fe144fdf2b7e983",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.subnet-public-1",
            "aws_subnet.subnet-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:403047027812:listener/app/rxelb/b43d32acb26df05b/202d197980c0656c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:403047027812:targetgroup/rxtargetgroup/fba6c4b668c2e2e0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:403047027812:listener/app/rxelb/b43d32acb26df05b/202d197980c0656c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:403047027812:loadbalancer/app/rxelb/b43d32acb26df05b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.default",
            "aws_security_group.allow_tls",
            "aws_subnet.subnet-public-1",
            "aws_subnet.subnet-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:403047027812:targetgroup/rxtargetgroup/fba6c4b668c2e2e0",
            "arn_suffix": "targetgroup/rxtargetgroup/fba6c4b668c2e2e0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:403047027812:targetgroup/rxtargetgroup/fba6c4b668c2e2e0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rxtargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0773d51a54f37016e",
            "owner_id": "403047027812",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e2039b0d9256729",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-crt"
            },
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f54e2bba171a48d",
            "route_table_id": "rtb-0773d51a54f37016e",
            "subnet_id": "subnet-02190e94ccc95c83a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-crt",
            "aws_subnet.subnet-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2dec87e6f7f10a1",
            "route_table_id": "rtb-0773d51a54f37016e",
            "subnet_id": "subnet-0f24c9cf4bd06148b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-crt",
            "aws_subnet.subnet-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb7bc134ce490179",
            "route_table_id": "rtb-0773d51a54f37016e",
            "subnet_id": "subnet-0479bea5bbe3c05ab"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-crt",
            "aws_subnet.subnet-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd003db76051a037",
            "route_table_id": "rtb-0773d51a54f37016e",
            "subnet_id": "subnet-0346b68f396165328"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-crt",
            "aws_subnet.subnet-public-4",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403047027812:security-group/sg-0a2a9094d1b389367",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2a9094d1b389367",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https port",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rx_security_group",
            "name_prefix": "",
            "owner_id": "403047027812",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rx_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403047027812:subnet/subnet-02190e94ccc95c83a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02190e94ccc95c83a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403047027812",
            "tags": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403047027812:subnet/subnet-0f24c9cf4bd06148b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f24c9cf4bd06148b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403047027812",
            "tags": {
              "Name": "subnet-public-2"
            },
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403047027812:subnet/subnet-0479bea5bbe3c05ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0479bea5bbe3c05ab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403047027812",
            "tags": {
              "Name": "subnet-public-3"
            },
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403047027812:subnet/subnet-0346b68f396165328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0346b68f396165328",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "403047027812",
            "tags": {
              "Name": "subnet-public-4"
            },
            "vpc_id": "vpc-07fe144fdf2b7e983"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:403047027812:vpc/vpc-07fe144fdf2b7e983",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bcc0f0b7acedfea",
            "default_route_table_id": "rtb-0271278caf441e7fa",
            "default_security_group_id": "sg-035e2206da3049e21",
            "dhcp_options_id": "dopt-a1a407db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07fe144fdf2b7e983",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0271278caf441e7fa",
            "owner_id": "403047027812",
            "tags": {
              "Name": "rx_vpc"
            }
          }
        }
      ]
    }
  ]
}